# Polter

./: .gitattributes  .gitignore  CLAUDE.md  JUDGES.md  LICENSE  README.md  RESEARCH.md  RESEARCH_DECISIONS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/: jest.config.js  jest.config.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
design/final/: README.md  SKILL.md  colors_and_type.css  index.html
design/foundation/: README.md  SKILL.md  colors_and_type.css
docs/: ARCHITECTURE.md  CREATURE.md  DATA.md  FEATURES.md  IDEA.md  OPENQUESTIONS.md  ROADMAP.md  TECHSTACK.md  WEBSITE.md
docs/plans/: 2026-05-05-permissions-and-insight-flow-design.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  onboarding.json  settings.json
src-tauri/icons/: icon.icns  tray-ghost-32x32.rgba
src-tauri/input-monitor/: Cargo.toml
src-tauri/input-monitor/src/: main.rs
src-tauri/migrations/: 001_initial.sql  002_group3.sql  003_group6.sql  004_inference_overhaul.sql  005_phase_a_signals.sql
src-tauri/src/: click_through.rs  commands.rs  lib.rs  main.rs  preferences.rs  session.rs  settings.rs  sleep.rs  tray.rs
src-tauri/src/classifier/: anomaly.rs  baseline.rs  daily_summary.rs  mod.rs  signals.rs  state_machine.rs
src-tauri/src/inference/: consolidation.rs  mod.rs  openrouter.rs  pool.rs  prompt.rs  research.rs  trigger.rs
src-tauri/src/pipeline/: aggregator.rs  mod.rs  ring_buffer.rs
src-tauri/src/sensors/: input_host.rs  mod.rs  system.rs
src-tauri/src/storage/: mod.rs  queries.rs  seed.rs
src/components/: Bubble.tsx  Creature.tsx  CreatureContextMenu.tsx  InsightBubble.tsx  MutterBubble.tsx  ThinkingBubble.tsx
src/hooks/: useCreatureAnimation.test.ts  useCreatureAnimation.ts  useCreaturePhysics.ts  useCreaturePosition.test.ts  useCreaturePosition.ts  useIdleDetection.test.ts  useIdleDetection.ts  useInsightQueue.test.ts  useInsightQueue.ts  usePreInsightGlow.test.ts  usePreInsightGlow.ts
src/lib/: bubblePosition.test.ts  bubblePosition.ts  burnDistress.test.ts  dialogue.ts  ghostUrls.ts  physics.ts  preferences.ts  spriteConfig.test.ts  (+1 more)
(+120 files in other folders)
